adding additional content to stylesheet.css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,3 +16,18 @@
     font-size: 18px;
     color: #e5e7eb;
 }
+
+.hero2 {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.intro_img {
+    height: 215px;
+    width: 158px;
+}
+
+.calltoaction {
+    background-color: #3882f6;
+    
+}
