--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,8 @@
-.hero {
-    font-size: 48px;
-    font-weight: bolder;
-    color: #F9FAF8;
+.body {
     background-color: #1f2937;
 }
 
-.header.logo {
+.logo {
     font-size: 24px;
     color: #f9faf8;
     background-color: #1f2937;
@@ -29,5 +26,26 @@
 
 .calltoaction {
     background-color: #3882f6;
-    
+
+}
+
+.samples {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.items {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
